--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -447,6 +447,9 @@ Commands.mmoupdate.InvalidType=[[RED]]{0} is not a valid database type.
 Commands.mmoupdate.Start=[[GRAY]]Starting conversion from {0} to {1}...
 Commands.mmoupdate.Finish=[[GRAY]]Database migration complete; the {1} database now has all data from the {0} database.
 Commands.mmoshowdb=[[YELLOW]]The currently used database is [[GREEN]]{0}
+Commands.mcconvert.Same=[[RED]]Already using formula type {0}
+Commands.mcconvert.Start=[[GRAY]]Starting conversion from {0} to {1} curve
+Commands.mcconvert.Finish=[[GRAY]]Formula conversion complete; now using an {0} XP curve.
 Commands.ModDescription=[[RED]]- Read brief mod description
 Commands.NoConsole=This command does not support console usage.
 Commands.Notifications.Off=Ability notifications toggled [[RED]]off
@@ -755,6 +758,7 @@ Commands.Description.mcstats=Show your mcMMO levels and XP
 Commands.Description.mctop=Show mcMMO leader boards
 Commands.Description.mmoedit=Edit mcMMO levels for a user
 Commands.Description.mmoupdate=Migrate mcMMO database from an old database into the current one
+Commands.Description.mcconvert=Converts formula types
 Commands.Description.mmoshowdb=Show the name of the current database type (for later use with /mmoupdate)
 Commands.Description.party=Control various mcMMO party settings
 Commands.Description.partychat=Toggle mcMMO party chat on/off or send party chat messages
