Implement importing from any database in /mmoupdate

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -442,8 +442,11 @@ Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - Modify target
 Commands.mmoedit.AllSkills.1=[[GREEN]]Your level in all skills was set to {0}!
 Commands.mmoedit.Modified.1=[[GREEN]]Your level in {0} was set to {1}!
 Commands.mmoedit.Modified.2=[[RED]]{0} has been modified for {1}.
-Commands.mmoupdate.Start=[[GRAY]]Starting conversion...
-Commands.mmoupdate.Finish=[[GREEN]]Conversion finished!
+Commands.mmoupdate.Same=[[RED]]You are already using the {0} database!
+Commands.mmoupdate.InvalidType=[[RED]]{0} is not a valid database type.
+Commands.mmoupdate.Start=[[GRAY]]Starting conversion from {0} to {1}...
+Commands.mmoupdate.Finish=[[GRAY]]Database migration complete; the {1} database now has all data from the {0} database.
+Commands.mmoshowdb=[[YELLOW]]The currently used database is [[GREEN]]{0}
 Commands.ModDescription=[[RED]]- Read brief mod description
 Commands.NoConsole=This command does not support console usage.
 Commands.Notifications.Off=Ability notifications toggled [[RED]]off
@@ -505,6 +508,7 @@ Commands.Usage.0=[[RED]]Proper usage is /{0}
 Commands.Usage.1=[[RED]]Proper usage is /{0} {1}
 Commands.Usage.2=[[RED]]Proper usage is /{0} {1} {2}
 Commands.Usage.3=[[RED]]Proper usage is /{0} {1} {2} {3}
+Commands.Usage.FullClassName=classname
 Commands.Usage.Level=level
 Commands.Usage.Message=message
 Commands.Usage.Page=page
@@ -751,7 +755,8 @@ Commands.Description.mcremove=Remove a user from the mcMMO database
 Commands.Description.mcstats=Show your mcMMO levels and XP
 Commands.Description.mctop=Show mcMMO leader boards
 Commands.Description.mmoedit=Edit mcMMO levels for a user
-Commands.Description.mmoupdate=Convert mcMMO database from Flatfile to MySQL
+Commands.Description.mmoupdate=Migrate mcMMO database from an old database into the current one
+Commands.Description.mmoshowdb=Show the name of the current database type (for later use with /mmoupdate)
 Commands.Description.party=Control various mcMMO party settings
 Commands.Description.partychat=Toggle mcMMO party chat on/off or send party chat messages
 Commands.Description.ptp=Teleport to an mcMMO party member
