--- a/Changelog.txt
+++ b/Changelog.txt
@@ -29,6 +29,8 @@ Version 1.4.06-dev
  + Added information about /party itemshare and /party expshare to the party help page
  + Added option to use scoreboards for power level display instead of Spout.
  + Added permission node to prevent inspecting hidden players
+ + Added SQL to Flatfile database conversion
+ + Added ability to use custom database managers and convert to/from them
  = Fixed bug where spawned arrows could throw ArrayIndexOutOfBoundsException
  = Fixed bug where custom Spout titles were overwritten by mcMMO.
  = Fixed bug where Nether Quartz wasn't included in Smelting or item sharing
