--- a/Changelog.txt
+++ b/Changelog.txt
@@ -29,6 +29,7 @@ Version 1.4.06-dev
  + Added information about /party itemshare and /party expshare to the party help page
  + Added option to use scoreboards for power level display instead of Spout.
  + Added permission node to prevent inspecting hidden players
+ = Fixed bug which could cause the server to hang for a minute when checking for updates. (Thanks to Riking)
  = Fixed bug where spawned arrows could throw ArrayIndexOutOfBoundsException
  = Fixed bug where custom Spout titles were overwritten by mcMMO.
  = Fixed bug where Nether Quartz wasn't included in Smelting or item sharing
