--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -764,3 +764,14 @@ Commands.Description.xprate=Modify the mcMMO XP rate or start an mcMMO XP event
 #UPDATE CHECKER
 UpdateChecker.outdated=You are using an outdated version of mcMMO!
 UpdateChecker.newavailable=There is a new version available on BukkitDev.
+
+#SCOREBOARD HEADERS
+Scoreboard.Header.PlayerStats=mcMMO Stats
+Scoreboard.Header.PlayerRank=mcMMO Rankings
+Scoreboard.Header.PlayerInspect=mcMMO Stats: 
+Scoreboard.Header.PowerLevel=Power Level
+Scoreboard.Misc.PowerLevel=Power Level
+Scoreboard.Misc.Level=Level
+Scoreboard.Misc.CurrentXP=Current XP
+Scoreboard.Misc.RemainingXP=Remaining XP
+Scoreboard.Misc.Overall=Overall
