Consolidate to 1 inspect method taking a PlayerProfile

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -773,7 +773,7 @@ UpdateChecker.newavailable=There is a new version available on BukkitDev.
 #SCOREBOARD HEADERS
 Scoreboard.Header.PlayerStats=mcMMO Stats
 Scoreboard.Header.PlayerRank=mcMMO Rankings
-Scoreboard.Header.PlayerInspect=mcMMO Stats: 
+Scoreboard.Header.PlayerInspect=mcMMO Stats: {0}
 Scoreboard.Header.PowerLevel=Power Level
 Scoreboard.Misc.PowerLevel=Power Level
 Scoreboard.Misc.Level=Level
