--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -771,6 +771,8 @@ UpdateChecker.outdated=You are using an outdated version of mcMMO!
 UpdateChecker.newavailable=There is a new version available on BukkitDev.
 
 #SCOREBOARD HEADERS
+Scoreboard.Tip.Mcboard.Keep=[[GOLD]]Tip: Use [[RED]]/mcscoreboard keep[[GOLD]] to keep the scoreboard on the right side!
+Scoreboard.Tip.Mcboard.Clear=[[GOLD]]Tip: Use [[RED]]/mcscoreboard clear[[GOLD]] to remove the scoreboard on the right side!
 Scoreboard.Header.PlayerStats=mcMMO Stats
 Scoreboard.Header.PlayerRank=mcMMO Rankings
 Scoreboard.Header.PlayerInspect=mcMMO Stats: {0}
