New 1.4.06 release before work starts on adding new features from 1.6

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,7 +7,7 @@ Key:
   ! Change
   - Removal
 
-Version 1.4.06-dev
+Version 1.4.06
  + Added "Ice Fishing" ability to Fishing
  + Added global scoreboards to track skill rankings (display using /mctop)
  + Added per-player scoreboard displays for the /inspect, /mcrank, /mcstats, and /<skillname> commands
